Regression: EEVEE: Mix Shader node always receives 0.0 value from Value node #100285

Closed
opened 2022-08-08 11:42:56 +02:00 by Sun Kim · 10 comments
Contributor

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 22.7.1.220725

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-06 22:09, hash: 8b51bd61fd
Worked: 3.4.0 Alpha, branch: master, commit date: 2022-07-28 22:40, hash: e261290cb6

Caused by b639e60864

Short description of error
Mix Shader node always receives 0.0 value from Value node

MixShader.png

Exact steps for others to reproduce the error

  • Add Mix Shader node
  • Connect Value node to its factor input socket

MixShader.blend

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 22.7.1.220725 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-06 22:09, hash: `8b51bd61fd` Worked: 3.4.0 Alpha, branch: master, commit date: 2022-07-28 22:40, hash: `e261290cb6` Caused by b639e60864 **Short description of error** Mix Shader node always receives 0.0 value from Value node ![MixShader.png](https://archive.blender.org/developer/F13345977/MixShader.png) **Exact steps for others to reproduce the error** * Add Mix Shader node * Connect Value node to its factor input socket [MixShader.blend](https://archive.blender.org/developer/F13345996/MixShader.blend)
Author
Contributor

Added subscriber: @persun

Added subscriber: @persun
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will try to spot the exact commit

Can confirm, will try to spot the exact commit
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Caused by b639e60864

@OmarEmaraDev : mind checking?

Caused by b639e60864 @OmarEmaraDev : mind checking?
Philipp Oeser changed title from EEVEE: Mix Shader node always receives 0.0 value from Value node to Regression: EEVEE: Mix Shader node always receives 0.0 value from Value node 2022-08-08 12:12:11 +02:00
Member

Will check.

Will check.

This issue was referenced by 8d080013f5

This issue was referenced by 8d080013f561f0084d8d937c9855c41be63170a4
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Omar Emara self-assigned this 2022-08-08 17:32:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100285
No description provided.