source/blender/nodes/shader/nodes/node_shader_rgb.cc
@@ -20,8 +20,9 @@ static int gpu_shader_rgb(GPUMaterial *mat,
                           GPUNodeStack *in,
                           GPUNodeStack *out)
 {
-  GPUNodeLink *link = GPU_uniformbuf_link_out(mat, node, out, 0);
-  return GPU_stack_link(mat, node, "set_rgba", in, out, link);
+  const bNodeSocket *socket = static_cast<bNodeSocket *>(node->outputs.first);
+  float *value = static_cast<bNodeSocketValueRGBA *>(socket->default_value)->value;
+  return GPU_link(mat, "set_rgba", GPU_uniform(value), &out->link);
 }
 
 }  // namespace blender::nodes::node_shader_rgb_cc
